@@ -20,6 +20,12 @@ MA 02111-1307, USA.
 
 2006-01-04  Torbjorn Granlund  <tege@swox.com>
 
+	* mpn/powerpc64/mode64/dive_1.asm: New file.
+
+	* mpn/powerpc64/mode64/invert_limb.asm: Add missing ASM_START.
+
+	* mpn/powerpc64/mode64/addmul_1.asm: Fix a comment typo.
+
 	* mpn/x86_64/diveby3.asm: Rewrite.
 
 2006-01-03  Torbjorn Granlund  <tege@swox.com>
